[tool.poetry]
name = "resource-monitor"
version = "0.1.0"
description = ""
authors = ["leishujie <leishujie@yunzhangfang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
